--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </style>
 </head>
 <body>
-    <h1>Bem-vindo ao TIBLLEC</h1>
-    <p>Este é um site de exemplo.</p>
+    <h1>NEOPAULI</h1>
+    <p>chiper/p>
 
-    <input type="text" id="palavraChave" placeholder="Digite uma palavra-chave">
+    <input type="text" id="palavraChave" placeholder="code">
 
     <script>
         document.getElementById("palavraChave").addEventListener("keypress", function(event) {
