--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
                         window.location.href = "https://youtu.be/6d0YAXXFukM?si=BiOM9bYDphWd-fh-";
                         break;
                     case "GEOMETRY DASH":
-                        window.location.href = "COLOQUE_AQUI_O_LINK_DA_PAGINA_DO_STEAM";
+                        window.location.href = "https://store.steampowered.com/app/322170/Geometry_Dash/";
+                        break;
+                        case "NEOPAULI":
+                        window.location.href = "";
                         break;
                     default:
-                        alert("Try again !");
+                        alert("no");
                 }
             }
         });
