--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         window.location.href = "https://drive.google.com/drive/folders/1XNY3NhXVvUOLPQYamQYYtENjBqtO8ZHn?usp=drive_link";
                         break;
                     case "OAFFEBS":
-                        window.location.href = "COLOQUE_AQUI_O_LINK_DO_MEDIAFIRE";
+                        window.location.href = "COLOQUE_AQUI_O_LINK_DO_REPOSITORIO";
                         break;
                     case "ADMIN":
                         window.location.href = "https://youtu.be/6d0YAXXFukM?si=BiOM9bYDphWd-fh-";
@@ -36,7 +36,7 @@
                         window.location.href = "https://store.steampowered.com/app/322170/Geometry_Dash/";
                         break;
                         case "NEOPAULI":
-                        window.location.href = "";
+                        window.location.href = "https://context.reverso.net/traducao/ingles-portugues/nice+try";
                         break;
                     default:
                         alert("no");
