--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         window.location.href = "https://drive.google.com/drive/folders/1XNY3NhXVvUOLPQYamQYYtENjBqtO8ZHn?usp=drive_link";
                         break;
                     case "OAFFEBS":
-                        window.location.href = "COLOQUE_AQUI_O_LINK_DO_REPOSITORIO";
+                        window.location.href = "https://paulineodplayer1.github.io/arquivodoarg/";
                         break;
                     case "ADMIN":
                         window.location.href = "https://youtu.be/6d0YAXXFukM?si=BiOM9bYDphWd-fh-";
